--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <!-- nav bar -->
 
       <!-- about -->
-      <div class="container d-flex m-3 bd-highlight box">
-        <div class="row">
+      <div class="container d-flex m-3 bd-highlight">
+        <div class="row box">
           <div class="col-12">
             <h1> Hello, world! 👋 </h1>
           </div>
