--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Source+Sans+Pro:wght@300&display=swap"
         rel="stylesheet">
 
+<!-- font awesome -->
+<script src="https://kit.fontawesome.com/4437f17642.js" crossorigin="anonymous"></script>
+
 
   <title>draft portfolio</title>
 </head>
@@ -27,36 +30,55 @@
 
 
 <body>
-  <nav class="navbar">
-    <div class="container">
+
+<!-- navbar -->
+  <ul class="nav fixed-top">
+    <li class="nav-item">
       <a class="navbar-brand" href="#">
         <img src="./assets/cornerbutton.png" alt="" width="85" height="50">
       </a>
-    </div>
-  </nav>
+    </li>
+    <li class="nav-item pt-2">
+      <a class="nav-link" href="#about">About</a>
+    </li>
+    <li class="nav-item pt-2">
+      <a class="nav-link" href="#work">Work</a>
+    </li>
+    <li class="nav-item pt-2">
+      <a class="nav-link" href="#contact">Contact</a>
+    </li>
+   
+  </ul>
 
-
-
-  <div class="container px-3">
+<!-- about -->
+  <div class="container px-3" id="about">
     <div class="row">
       <div class="col-sm-6 text-start title-pad">
         <h1 class="title">Hello World. </h1>
         <h1 class="title">I'm Madeleine.</h1>
         <h2 class="sub-title">A junior web developer currently located in Adelaide, Australia.</h2>
         <h5>I am currently completing a coding bootcamp through the University of Adelaide. When Im not not hunched over my computer staring at code, you’ll find me reading or ranting to everyone about the latest film I saw.</h5>
-        <br>
-        <button type="button" class="btn">email me</button>
+        <a class="" href=""><i class="fab fa-linkedin-in fa-2x"></a></i> <a class="px-2" href=""><i class="fab fa-github fa-2x"></i></a>
       </div>
       <div class="col-sm-6 img-border pt-5 pb-3">
         <img src="assets/IMG_2567.jpg" class="main-img">
+      </div>
+    </div>
+  </div>
 
+
+<!-- work -->
+  <div class="container px-3" id="work">
+    <div class="row">
+      <div class="col-sm-6 sub-title-pad">
+        <h1 class="title">Selected Projects</h1>
+        <h2 class="sub-title">Below is a small selection of my projects so far.</h2>
       </div>
     </div>
   </div>
 
   <div class="container px-5 card-cont">
     <div class="row align-items-center">
-
       <div class="col-sm-4 pt-5 pb-3">
         <div class="card" style="width: 18rem;">
           <img src="./assets/moodvies.png" class="card-img-top" alt="...">
@@ -91,16 +113,26 @@
           </div>
         </div>
       </div>
-
-
-
     </div>
   </div>
 
 
+<!-- contact -->
+  <div class="container px-3" id="contact">
+    <div class="row">
+      <div class="col-sm-6 sub-title-pad">
+        <h1 class="title">Contact</h1>
+        <h2 class="sub-title">Lets Work together.</h2>
+        <a class="" href=""><i class="far fa-envelope fa-3x"></i></a>
+      </div>
+    </div>
+  </div>
 
-  <div class="mt-5 p-4 footer text-center">
-    <p>Footer</p>
+<!-- footer -->
+  <div class="mt-5 p-2 footer text-center">
+    <a class="" href="#about">
+      <img src="assets/happycomp.png">
+    </a>
   </div>
 
  
