--- a/index.html
+++ b/index.html
@@ -58,11 +58,19 @@
         <h1 class="title">I'm Madeleine.</h1>
         <h2 class="sub-title">A junior web developer currently located in Adelaide, Australia.</h2>
         <h5>I am currently completing a coding bootcamp through the University of Adelaide. When Im not not hunched over my computer staring at code, you’ll find me reading or ranting to everyone about the latest film I saw.</h5>
-        <a class="" href=""><i class="fab fa-linkedin-in fa-2x"></a></i> <a class="px-2" href=""><i class="fab fa-github fa-2x"></i></a>
+
+      
+
+
+
+
+        <a class="social-links" href="https://www.linkedin.com/in/madeleine-cosway" target="blank"><i class="fab fa-linkedin fa-2x"></a></i> <a class="social-links px-2" href="https://github.com/madeleinesc" target="blank"><i class="fab fa-github-square fa-2x"></i></a>
       </div>
-      <div class="col-sm-6 img-border pt-5 pb-3">
+
+      <div class="col-sm-6 pb-3 img-pad">
         <img src="assets/IMG_2567.jpg" class="main-img">
       </div>
+
     </div>
   </div>
 
@@ -70,7 +78,7 @@
 <!-- work -->
   <div class="container px-3" id="work">
     <div class="row">
-      <div class="col-sm-6 sub-title-pad">
+      <div class="col-sm-6 title-pad">
         <h1 class="title">Selected Projects</h1>
         <h2 class="sub-title">Below is a small selection of my projects so far.</h2>
       </div>
@@ -85,7 +93,7 @@
           <div class="card-body">
             <h5 class="card-title">Moodvies</h5>
             <p class="card-text">An app that helps you choose a movie based on you current mood.</p>
-            <a href="#" class="btn">View Project</a>
+            <a href="https://github.com/RHJeffries/ideal-telegram" target="blank" class="btn">View Project</a>
           </div>
         </div>
       </div>
@@ -97,7 +105,7 @@
           <div class="card-body">
             <h5 class="card-title">The Book Was Better</h5>
             <p class="card-text">A book club that only reads books that have been made into movies.</p>
-            <a href="#" class="btn">View Project</a>
+            <a href="https://github.com/madeleinesc/The-Book-Was-Better" target="blank" class="btn">View Project</a>
           </div>
         </div>
       </div>
@@ -109,7 +117,7 @@
           <div class="card-body">
             <h5 class="card-title">Note Taker</h5>
             <p class="card-text">An app that can be used to write and save notes.</p>
-            <a href="#" class="btn">View Project</a>
+            <a href="https://github.com/madeleinesc/note-taker-app" target="blank" class="btn">View Project</a>
           </div>
         </div>
       </div>
@@ -120,17 +128,17 @@
 <!-- contact -->
   <div class="container px-3" id="contact">
     <div class="row">
-      <div class="col-sm-6 sub-title-pad">
-        <h1 class="title">Contact</h1>
-        <h2 class="sub-title">Lets Work together.</h2>
-        <a class="" href=""><i class="far fa-envelope fa-3x"></i></a>
+      <div class="col-sm-12 text-center sub-title-pad">
+        <h1 class="title">Lets Work together.</h1>
+        <h2 class="sub-title">Feel free to contact me if you have any enquiries!</h2><a class="email-link" href="mailto: madeleine.codes@gmail.com"><i class="far fa-envelope fa-3x"></i></a>
+        
       </div>
     </div>
   </div>
 
 <!-- footer -->
   <div class="mt-5 p-2 footer text-center">
-    <a class="" href="#about">
+    <a class="happy-comp" href="#about">
       <img src="assets/happycomp.png">
     </a>
   </div>
