--- a/index.html
+++ b/index.html
@@ -7,149 +7,221 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
   <!-- css -->
   <link rel="stylesheet" href="./src/css/styles.css">
 
   <!-- google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@800&family=Source+Sans+Pro:wght@300&display=swap"
-        rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter&family=Libre+Baskerville:ital@1&display=swap"
+    rel="stylesheet">
 
-<!-- font awesome -->
-<script src="https://kit.fontawesome.com/4437f17642.js" crossorigin="anonymous"></script>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/4437f17642.js" crossorigin="anonymous"></script>
 
+    <!-- aos library -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-  <title>draft portfolio</title>
+  <title>React Portfolio template</title>
 </head>
-
-
-
 
 <body>
 
-<!-- navbar -->
-  <ul class="nav fixed-top">
-    <li class="nav-item">
-      <a class="navbar-brand" href="#">
-        <img src="./assets/cornerbutton.png" alt="" width="85" height="50">
-      </a>
-    </li>
-    <li class="nav-item pt-2">
-      <a class="nav-link" href="#about">About</a>
-    </li>
-    <li class="nav-item pt-2">
-      <a class="nav-link" href="#work">Work</a>
-    </li>
-    <li class="nav-item pt-2">
-      <a class="nav-link" href="#contact">Contact</a>
-    </li>
-   
-  </ul>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light p-3 fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Madeleine</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
-<!-- about -->
-  <div class="container px-3" id="about">
+
+
+  <!-- intro -->
+  <div class="container p-3">
     <div class="row">
-      <div class="col-sm-6 text-start title-pad">
-        <h1 class="title">Hello World. </h1>
-        <h1 class="title">I'm Madeleine.</h1>
-        <h2 class="sub-title">A junior web developer currently located in Adelaide, Australia.</h2>
-        <h5>I am currently completing a coding bootcamp through the University of Adelaide. When Im not not hunched over my computer staring at code, you’ll find me reading or ranting to everyone about the latest film I saw.</h5>
-
-      
-
-
-
-
-        <a class="social-links" href="https://www.linkedin.com/in/madeleine-cosway" target="blank"><i class="fab fa-linkedin fa-2x"></a></i> <a class="social-links px-2" href="https://github.com/madeleinesc" target="blank"><i class="fab fa-github-square fa-2x"></i></a>
+      <div class="col-md-7" data-aos="fade-up">
+        <h1 class="display-4">Hi, I'm <span class="bold">Madeleine 👋</span>. A junior <span class="italic">web
+            developer</span> and <span class="italic">film enthusiast</span>, currently located in
+          <span class="bold">Adelaide, Australia</span>.
+        </h1>
       </div>
-
-      <div class="col-sm-6 pb-3 img-pad">
-        <img src="assets/IMG_2567.jpg" class="main-img">
+      <div class="col-md-4" data-aos="fade-up">
+        <img src="./assets/IMG_3651.jpg" class="rounded mx-auto d-block img-fluid main-img">
       </div>
 
     </div>
   </div>
 
 
-<!-- work -->
-  <div class="container px-3" id="work">
+
+
+  <!-- about -->
+  <div class="container p-3" id="about">
+    <h1 class="display-6 sub-title" data-aos="fade-up">I'm <span class="bold">Madeleine</span> and I am studying <span class="italic">web
+        development</span> at the <span class="italic">University of
+        Adelaide</span> coding bootcamp.</h1>
+    <p class="lead" data-aos="fade-up">
+      I spent the last decade travelling around the
+      world, settling down in Austin, Texas before moving to Manchester (UK) in late 2019. While stuck in lockdown I
+      completed my BA in Criminology where I spent my last semester studying
+      cyber crime. I moved back to Australian in 2020 where I decided to pursue coding head on! When I'm not hunched
+      over my macbook staring furiously at some code, you'll probably find me at the cinema! 😉
+    </p>
+  </div>
+
+
+
+  <!-- projects -->
+  <div class="container p-3" id="work">
+    <h1 class="display-6 sub-title" data-aos="fade-up">I started my <span class="bold">coding career</span> with <span class="italic">Python</span>
+      using Pycharm, then briefly worked with <span class="italic">C++</span> in RStudio before enrolling in the
+      bootcamp to continue my studies.</h1>
+    <p class="lead" data-aos="fade-up">
+      So far, I have worked on projects for front-end as well as back-end and full stack development. While I am still
+      relatively new to coding, I have picked up many skills along the way and now have experience in the following:
+    </p>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">HTML</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">CSS</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">Javascript</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">Node.js</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">Express.js</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">NoSQL</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">MySQL</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">React</button>
+    <button type="button" class="btn btn-outline-dark" data-aos="fade-up">Python</button>
+    <br>
+    <br>
+    <br>
+  </div>
+
+  <div class="container p-3">
     <div class="row">
-      <div class="col-sm-6 title-pad">
-        <h1 class="title">Selected Projects</h1>
-        <h2 class="sub-title">Below is a small selection of my projects so far.</h2>
+      <div class="col-md-6">
+        <a href="https://rhjeffries.github.io/ideal-telegram/" ><img src="./assets/moodvies.png" class="project-img img-fluid" data-aos="fade-up"></a>
+        <br>
+        <br>
+        <p class="lead" data-aos="fade-up">
+          Moodvies - 2021
+        </p>
+        <a href="https://github.com/RHJeffries/ideal-telegram" class="project-links" data-aos="fade-up"><p>
+          An app that helps you choose movies based on your current mood. Click on the image to view the live project or
+          click here for the project repo.
+        </p></a>
+        <br>
+        <br>
       </div>
+
+      <div class="col-md-6"></div>
+
+      <div class="col-md-6"></div>
+
+      <div class="col-md-6">
+        <a href="https://the-book-was-better-book-club.herokuapp.com/"><img src="./assets/bookwasbetter.png" class="project-img img-fluid" data-aos="fade-up"></a>
+        <br>
+        <br>
+        <p class="lead" data-aos="fade-up">
+          The Book Was Better - 2021
+        </p>
+        <a href="https://github.com/madeleinesc/The-Book-Was-Better" class="project-links" data-aos="fade-up"><p>
+          A book club that reads books based solely on whether they have been turned into movies. Click on the image to
+          view the live project or click here for the project repo.
+        </p></a>
+        <br>
+        <br>
+      </div>
+
+
+      <div class="col-md-6">
+        <a href="https://immense-bastion-97694.herokuapp.com/"><img src="./assets/notetaker.png" class="project-img img-fluid" data-aos="fade-up"></a>
+        <br>
+        <br>
+        <p class="lead" data-aos="fade-up">
+          Note Taker - 2021
+        </p>
+        <a href="https://github.com/madeleinesc/note-taker-app" class="project-links" data-aos="fade-up"><p>
+          Note Taker is an application that can be used to write and save notes. Click on the image to view the live
+          project or click here for the project repo.
+        </p></a>
+        <br>
+        <br>
+      </div>
+
+      <div class="col-md-6"></div>
+
+      <div class="col-md-6"></div>
+
+
+      <div class="col-md-6">
+        <a href="https://madeleinesc.github.io/work-day-scheduler/"><img src="./assets/workday.png" class="project-img img-fluid" data-aos="fade-up"></a>
+        <br>
+        <br>
+        <p class="lead" data-aos="fade-up">
+          Work Scheduler - 2021
+        </p>
+        <a href="https://github.com/madeleinesc/work-day-scheduler" class="project-links" data-aos="fade-up"><p>
+          A daily scheduler that changes color based on the time of day. Click on the image to view the live project or
+          click here for the project repo.
+        </p></a>
+        <br>
+        <br>
+      </div>
+
     </div>
   </div>
 
-  <div class="container px-5 card-cont">
-    <div class="row align-items-center">
-      <div class="col-sm-4 pt-5 pb-3">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/moodvies.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Moodvies</h5>
-            <p class="card-text">An app that helps you choose a movie based on you current mood.</p>
-            <a href="https://github.com/RHJeffries/ideal-telegram" target="blank" class="btn">View Project</a>
-          </div>
-        </div>
-      </div>
+
+  <!-- contact -->
+  <div class="container p-3" id="contact" >
+    <h1 class="display-6 text-center" data-aos="fade-up">
+      Lets work together 📧.
+    </h1>
+    <a href="mailto: madeleine.codes@gmail.com" class="contact-link"><p class="lead italic text-center" data-aos="fade-up">madeleine.codes@gmail.com</p></a>
+    <section class="mb-4 text-center">
+      <!-- Linkedin -->
+      <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-linkedin-in"></i
+      ></a>
+
+      <!-- Github -->
+      <a class="btn btn-outline-dark btn-floating m-1" href="#!" role="button"
+        ><i class="fab fa-github"></i
+      ></a>
+    </section>
 
 
-      <div class="col-sm-4 pt-5 pb-3">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/bookwasbetter.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">The Book Was Better</h5>
-            <p class="card-text">A book club that only reads books that have been made into movies.</p>
-            <a href="https://github.com/madeleinesc/The-Book-Was-Better" target="blank" class="btn">View Project</a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-sm-4 pt-5 pb-3">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/notetaker.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Note Taker</h5>
-            <p class="card-text">An app that can be used to write and save notes.</p>
-            <a href="https://github.com/madeleinesc/note-taker-app" target="blank" class="btn">View Project</a>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
 
-
-<!-- contact -->
-  <div class="container px-3" id="contact">
-    <div class="row">
-      <div class="col-sm-12 text-center sub-title-pad">
-        <h1 class="title">Lets Work together.</h1>
-        <h2 class="sub-title">Feel free to contact me if you have any enquiries!</h2><a class="email-link" href="mailto: madeleine.codes@gmail.com"><i class="far fa-envelope fa-3x"></i></a>
-        
-      </div>
-    </div>
-  </div>
-
-<!-- footer -->
-  <div class="mt-5 p-2 footer text-center">
-    <a class="happy-comp" href="#about">
-      <img src="assets/happycomp.png">
-    </a>
-  </div>
-
- 
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
